hotloading of resources now occurs